# pocketcasts

./: .build.yml  .gitignore  Cargo.toml  README.md  flake.nix
examples/: fetch-podcasts.rs
src/: client.rs  error.rs  lib.rs
src/model/: episode.rs  mod.rs  podcast.rs  subscription.rs
tests/: test_client.rs
