[package]
name = "pocketcasts"
version = "0.1.4"
authors = ["Francesco Ceccon <francesco@ceccon.me>"]
documentation = "https://docs.rs/pocketcasts"
edition = "2021"
homepage = "https://git.sr.ht/~fra/pocketcasts-rs"
keywords = ["pocketcasts", "podcast"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://git.sr.ht/~fra/pocketcasts-rs"
description = "Pocketcasts (unofficial) API client."

[dependencies]
dotenv = "0.15.0"
failure = "0.1.6"
failure_derive = "0.1.6"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
once_cell = "1.2"
tokio-test = "0.4"
